--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ??????mysql?
-spring.datasource.url=jdbc:mysql://localhost:3306/campus_secondhand?useSSL=false&serverTimezone=UTC&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/shopping_system?useSSL=false&serverTimezone=UTC&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
